--- a/package.json
+++ b/package.json
@@ -1,26 +1,9 @@
 {
-  "title": "Bare",
-  "name": "startbootstrap-bare",
-  "version": "4.1.1",
-  "description": "A basic HTML starter template for Bootstrap",
-  "keywords": [
-    "css",
-    "sass",
-    "html",
-    "responsive",
-    "theme",
-    "template"
-  ],
-  "homepage": "https://startbootstrap.com/template-overviews/bare",
-  "bugs": {
-    "url": "https://github.com/BlackrockDigital/startbootstrap-bare/issues",
-    "email": "feedback@startbootstrap.com"
-  },
+  "title": "kyi.aung.io",
+  "name": "kyi.aung.io",
+  "version": "1.0.0",
+  "description": "A placeholder site",
   "license": "MIT",
-  "author": "Start Bootstrap",
-  "contributors": [
-    "David Miller (http://davidmiller.io/)"
-  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/BlackrockDigital/startbootstrap-bare.git"
