--- a/package.json
+++ b/package.json
@@ -10,16 +10,35 @@
   },
   "dependencies": {
     "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-react-app": "^3.1.2",
-    "bootstrap": "4.1.1",
-    "jquery": "3.3.1"
+    "bootstrap": "^4.1.1",
+    "css-loader": "^0.28.11",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.3",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "style-loader": "^0.21.0"
   },
   "devDependencies": {
-    "browser-sync": "2.24.3",
-    "gulp": "^3.9.1"
+    "browser-sync": "^2.24.5",
+    "html-webpack-plugin": "^3.2.0",
+    "webpack": "^4.14.0",
+    "webpack-cli": "^3.0.8",
+    "webpack-dev-server": "^3.1.4"
   },
-  "main": "game.js",
+  "main": "src/game.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  }
+    "start": "webpack-dev-server --mode development --open --hot",
+    "build": "webpack --mode production"
+  },
+  "bugs": {
+    "url": "https://github.com/BlackrockDigital/startbootstrap-bare/issues"
+  },
+  "homepage": "https://github.com/BlackrockDigital/startbootstrap-bare#readme",
+  "keywords": [],
+  "author": ""
 }
